# ImageWeaver

./: .gitignore  LICENSE  README.md  activate_env.bat  build.bat  build.py  build_py.py  changelog.md  create_icon.py  imageweaver_console.py  imageweaver_gui.py  manifest.in.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_console.bat  run_gui.bat  setup.bat  setup.py  start.bat  test.bat
.github/workflows/: build.yml
