[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageweaver"
version = "1.0.0"
description = "AI-Powered Image Placement for Translated Documents"
readme = "README.md"
authors = [
    {name = "ImageWeaver Contributors", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
]
keywords = ["html", "image", "translation", "ai", "llm", "context-matching", "document-processing"]
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "pathlib2>=2.3.7"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "auto-py-to-exe>=2.40.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "flake8>=6.0.0"
]
openai = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/ImageWeaver"
Documentation = "https://github.com/yourusername/ImageWeaver/wiki"
Repository = "https://github.com/yourusername/ImageWeaver"
"Bug Tracker" = "https://github.com/yourusername/ImageWeaver/issues"

[project.scripts]
imageweaver = "imageweaver_console:main"
imageweaver-gui = "imageweaver_gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["imageweaver*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".tox",
    ".coverage",
    ".coverage.*",
    ".cache",
    "nosetests.xml",
    "coverage.xml",
    "*.cover",
    "*.log",
    ".venv"
]
